--- a/app/src/main/res/xml/p005preference.xml
+++ b/app/src/main/res/xml/p005preference.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <EditTextPreference android:title="Cool Name"
+    <EditTextPreference
+        android:title="User Name"
         android:key="editTextPreferenceName2"
         android:summary="please, enter your name">
     </EditTextPreference>
+
+    <EditTextPreference
+        android:title="User Surname"
+        android:key="editTextPreferenceSurname2"
+        android:summary="please, enter your surname">
+    </EditTextPreference>
+
     <CheckBoxPreference android:title="Music On/Off"
         android:key="checkBoxPreferenceMusic2"
         android:summary="please, select your music preference"
         android:defaultValue="true">
     </CheckBoxPreference>
-    <ListPreference android:title="List of transport"
+
+    <ListPreference
+        android:title="List of transport"
         android:summary="please, select your transport choices"
         android:key="listPreferenceTransport"
-        android:entries="@array/name2"
-        android:entryValues="@array/values2">
+        android:entries="@array/transportation_names_p005"
+        android:entryValues="@array/transportation_values_p005"
+        android:defaultValue="Yaya is default value">
     </ListPreference>
+
+
 </PreferenceScreen>
