--- a/app/src/main/res/layout/p015radiogroup.xml
+++ b/app/src/main/res/layout/p015radiogroup.xml
@@ -25,16 +25,12 @@
             android:id="@+id/radioButton3P015"/>
 
     </RadioGroup>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Which one do you like to be your girlfriend"
-        android:onClick="onClickMtdP015" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:id="@+id/textViewP015"
-        android:text="hey"
+        android:hint="Please select your girlfriend behaviour"
         />
 </LinearLayout>
