--- a/app/src/main/res/layout/p020tabhosttabspec.xml
+++ b/app/src/main/res/layout/p020tabhosttabspec.xml
@@ -3,18 +3,15 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TabHost
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tabHost"
-        android:layout_gravity="center_horizontal">
+        android:id="@+id/tabHost2">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="1">
+            android:orientation="vertical">
 
             <TabWidget
                 android:id="@android:id/tabs"
@@ -24,11 +21,10 @@
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="6.29">
+                android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/tab1"
+                    android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
@@ -36,51 +32,45 @@
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Start Watch"
-                        android:id="@+id/buttonStart" />
+                        android:text="Start"
+                        android:id="@+id/buttonStart2"/>
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Stop Watch"
-                        android:id="@+id/buttonStop" />
+                        android:text="Stop"
+                        android:id="@+id/buttonStop2"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="Large Text"
-                        android:id="@+id/textViewShowResult" />
+                        android:text="izlenmeSuresi"
+                        android:id="@+id/buttonShowResult2"/>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/tab2"
-                    android:layout_width="353dp"
-                    android:layout_height="363dp"
-                    android:orientation="vertical">
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="Large Text"
-                        android:id="@+id/textView2" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/tab3"
+                    android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hello from TabSpec in TapHost"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
                     <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Add a tab"
-                        android:id="@+id/buttonAddTab" />
+                        android:id="@+id/buttonAddTab2"/>
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
