--- a/app/src/main/res/layout/p001listactivity.xml
+++ b/app/src/main/res/layout/p001listactivity.xml
@@ -6,7 +6,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listViewP001"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:divider="#000"
+        android:dividerHeight="2dp"/>
 </RelativeLayout>
