--- a/app/src/main/res/layout/p004setinputtype.xml
+++ b/app/src/main/res/layout/p004setinputtype.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editTextP004"
             android:layout_weight="80"
-            android:hint="ToggleButton on oldugunda password moduna gecis!!!" />
+            android:hint="Only number" />
 
         <ToggleButton
             android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText2P004"
             android:layout_weight="80"
-            android:hint="ToggleButton on rakamlar password moduna gecis!!!" />
+            android:hint="Number and text" />
 
         <ToggleButton
             android:layout_width="wrap_content"
